Prepare paper for arXiv submission
- Move email under author name in author block
- Add arXiv submission package (zip)

--- a/paper/grangersearch-paper.tex
+++ b/paper/grangersearch-paper.tex
@@ -51,7 +51,8 @@
     \textit{Ionian University}\\
     Plateia Iatrou Tsirigoti 7, GR-49100\\
     Corfu, Greece\\
-    \texttt{nkorf@ionio.gr}
+    \texttt{nkorf@ionio.gr}\\
+    ORCID: \href{https://orcid.org/0000-0001-6377-4837}{0000-0001-6377-4837}
 }
 
 \date{\today}
