Add JSS-formatted paper with style improvements
- New grangersearch-jss.tex in Journal of Statistical Software format
- Added JSS class files (jss.cls, jss.bst, jsslogo.jpg)
- Updated references.bib with DOIs
- Curated content for cleaner writing style
- Added hyperref, amsmath, amssymb for arXiv compatibility

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -6,7 +6,8 @@
   number={3},
   pages={424--438},
   year={1969},
-  publisher={JSTOR}
+  publisher={JSTOR},
+  doi={10.2307/1912791}
 }
 
 @article{sims1972money,
@@ -28,7 +29,8 @@
   number={1},
   pages={1--48},
   year={1980},
-  publisher={JSTOR}
+  publisher={JSTOR},
+  doi={10.2307/1912017}
 }
 
 @article{hiemstra1994testing,
@@ -39,7 +41,8 @@
   number={5},
   pages={1639--1664},
   year={1994},
-  publisher={Wiley}
+  publisher={Wiley},
+  doi={10.1111/j.1540-6261.1994.tb04776.x}
 }
 
 @article{kraft1978relationship,
@@ -61,7 +64,8 @@
   number={8},
   pages={3293--3297},
   year={2015},
-  publisher={Society for Neuroscience}
+  publisher={Society for Neuroscience},
+  doi={10.1523/JNEUROSCI.4399-14.2015}
 }
 
 @article{toda1995statistical,
@@ -72,21 +76,24 @@
   number={1-2},
   pages={225--250},
   year={1995},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0304-4076(94)01616-8}
 }
 
 @book{lutkepohl2005new,
   title={New introduction to multiple time series analysis},
   author={L{\"u}tkepohl, Helmut},
   year={2005},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1007/978-3-540-27752-1}
 }
 
 @book{peters2017elements,
   title={Elements of causal inference: Foundations and learning algorithms},
   author={Peters, Jonas and Janzing, Dominik and Sch{\"o}lkopf, Bernhard},
   year={2017},
-  publisher={MIT Press}
+  publisher={MIT Press},
+  isbn={9780262037310}
 }
 
 @manual{vars,
@@ -112,14 +119,16 @@
   volume={4},
   number={43},
   pages={1686},
-  year={2019}
+  year={2019},
+  doi={10.21105/joss.01686}
 }
 
 @article{robinson2014broom,
   title={broom: An {R} package for converting statistical analysis objects into tidy data frames},
   author={Robinson, David},
   journal={arXiv preprint arXiv:1412.3565},
-  year={2014}
+  year={2014},
+  doi={10.48550/arXiv.1412.3565}
 }
 
 @manual{rlang,
@@ -128,4 +137,29 @@
   year={2024},
   note={R package version 1.1.4},
   url={https://CRAN.R-project.org/package=rlang}
+}
+
+@manual{R,
+  title={R: A Language and Environment for Statistical Computing},
+  author={{R Core Team}},
+  organization={R Foundation for Statistical Computing},
+  address={Vienna, Austria},
+  year={2024},
+  url={https://www.R-project.org/}
+}
+
+@manual{devtools,
+  title={devtools: Tools to Make Developing {R} Packages Easier},
+  author={Wickham, Hadley and Hester, Jim and Chang, Winston and Bryan, Jennifer},
+  year={2024},
+  note={R package version 2.4.5},
+  url={https://CRAN.R-project.org/package=devtools}
+}
+
+@manual{NlinTS,
+  title={NlinTS: Models for Non Linear Causality Detection in Time Series},
+  author={Hmamouche, Youssef},
+  year={2020},
+  note={R package version 1.4.5},
+  url={https://CRAN.R-project.org/package=NlinTS}
 }
