Add constrained Granger causality, GC strength measure, and distribution analysis
New features from Dimitrakopoulos (2024) thesis:
- Constrained GC type: uses single lag value instead of all lags 1 to p
- GC strength measure: log-variance ratio for continuous causality magnitude
- Auto-differencing option for stationarity preprocessing
- granger_distribution() function for analyzing GC across all variable pairs
- plot methods for distribution and search results

Updated paper to reflect new implementation with additional methodology sections.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -163,3 +163,46 @@
   note={R package version 1.4.5},
   url={https://CRAN.R-project.org/package=NlinTS}
 }
+
+@article{granger1980testing,
+  title={Testing for causality: A personal viewpoint},
+  author={Granger, Clive WJ},
+  journal={Journal of Economic Dynamics and Control},
+  volume={2},
+  pages={329--352},
+  year={1980},
+  publisher={Elsevier},
+  doi={10.1016/0165-1889(80)90069-X}
+}
+
+@article{barrett2010multivariate,
+  title={Multivariate {G}ranger causality and generalized variance},
+  author={Barrett, Adam B and Barnett, Lionel and Seth, Anil K},
+  journal={Physical Review E},
+  volume={81},
+  number={4},
+  pages={041907},
+  year={2010},
+  publisher={APS},
+  doi={10.1103/PhysRevE.81.041907}
+}
+
+@article{shojaie2022granger,
+  title={{G}ranger causality: A review and recent advances},
+  author={Shojaie, Ali and Fox, Emily B},
+  journal={Annual Review of Statistics and Its Application},
+  volume={9},
+  number={1},
+  pages={289--319},
+  year={2022},
+  publisher={Annual Reviews},
+  doi={10.1146/annurev-statistics-040120-010930}
+}
+
+@mastersthesis{dimitrakopoulos2024detecting,
+  title={Detecting {G}ranger Causality},
+  author={Dimitrakopoulos, Petros S},
+  year={2024},
+  school={Eindhoven University of Technology},
+  type={Master's Thesis}
+}
