--- a/paper/grangersearch-jss.tex
+++ b/paper/grangersearch-jss.tex
@@ -27,7 +27,7 @@
 \Shorttitle{\pkg{grangersearch}: Granger Causality in \proglang{R}}
 
 \Abstract{
-This paper introduces \pkg{grangersearch}, an \proglang{R} package for performing exhaustive Granger causality searches on multiple time series. The package provides: (1)~exhaustive pairwise search across multiple variables, (2)~automatic lag order optimization with visualization, (3)~tidyverse-compatible syntax with pipe operators and non-standard evaluation, and (4)~integration with the \pkg{broom} ecosystem through \fct{tidy} and \fct{glance} methods. The package wraps the \pkg{vars} infrastructure while providing a simple interface for exploratory causal analysis. We describe the statistical methodology, demonstrate the package through worked examples, and discuss practical considerations for applied researchers.
+This paper introduces \pkg{grangersearch}, an \proglang{R} package for performing exhaustive Granger causality searches on multiple time series. The package provides: (1)~exhaustive pairwise search across multiple variables, (2)~both classic and constrained Granger causality formulations, (3)~a continuous GC strength measure based on log-variance ratios, (4)~automatic lag order optimization with visualization, (5)~optional first-order differencing for stationarity, (6)~distribution analysis tools for exploratory analysis, and (7)~tidyverse-compatible syntax with \pkg{broom} integration. The constrained formulation uses only a single lagged value rather than all values up to the specified lag, reducing overfitting for larger lag orders. We describe the statistical methodology, demonstrate the package through worked examples, and discuss practical considerations for applied researchers.
 }
 
 \Keywords{Granger causality, time series analysis, VAR models, exhaustive search, tidyverse, \proglang{R}}
@@ -60,9 +60,12 @@ This paper presents \pkg{grangersearch}, an \proglang{R} package that wraps the 
 \begin{itemize}
   \item A single function interface that tests causality in both directions
   \item Exhaustive pairwise search across multiple time series variables
+  \item Both classic and constrained Granger causality formulations \citep{dimitrakopoulos2024detecting}
+  \item A continuous GC strength measure based on log-variance ratios \citep{barrett2010multivariate}
+  \item Optional first-order differencing for stationarity
+  \item Distribution analysis tools for exploring GC patterns across variable pairs
   \item Automatic lag order optimization with visualization
   \item Tidyverse-compatible syntax with pipe operators and non-standard evaluation
-  \item Structured output objects with all relevant test statistics
   \item Integration with the \pkg{broom} package \citep{robinson2014broom} ecosystem
 \end{itemize}
 
@@ -106,6 +109,28 @@ F = \frac{(\text{RSS}_R - \text{RSS}_U)/p}{\text{RSS}_U/(T - 2p - 1)}
 where RSS$_R$ and RSS$_U$ denote the residual sum of squares from the restricted and unrestricted models respectively, $T$ is the sample size, and $p$ is the lag order. Under $H_0$, this statistic follows an $F(p, T - 2p - 1)$ distribution asymptotically.
 
 The \pkg{grangersearch} package performs this test in both directions---testing whether $X$ Granger-causes $Y$ and whether $Y$ Granger-causes $X$---providing a complete picture of the predictive relationships between two series.
+
+\subsection{Constrained Granger causality}
+
+A potential limitation of classic Granger causality is that model complexity grows with the lag order $p$. As $p$ increases, the number of parameters to estimate grows linearly, which can lead to overfitting, particularly with limited sample sizes \citep{shojaie2022granger}. This overfitting manifests as artificially low $p$-values that do not reflect genuine predictive relationships.
+
+The \pkg{grangersearch} package implements an alternative ``constrained'' formulation \citep{dimitrakopoulos2024detecting} that uses only the single lagged value at lag $q$, rather than all values from 1 to $q$. The constrained models are:
+\begin{eqnarray}
+Y_t &=& \alpha_0 + \alpha_q Y_{t-q} + \varepsilon_t \quad \text{(univariate)} \label{eq:constrained_uni} \\
+Y_t &=& \alpha_0 + \alpha_q Y_{t-q} + \beta_q X_{t-q} + \varepsilon_t \quad \text{(bivariate)} \label{eq:constrained_bi}
+\end{eqnarray}
+
+This approach has constant model complexity (two or three parameters) regardless of the lag order. The hypothesis test proceeds by comparing the residual variances of the univariate and bivariate models using an $F$-test. Empirical results suggest that the constrained formulation overfits less than classic Granger causality, particularly for larger lag values, while still detecting genuine predictive relationships.
+
+\subsection{GC strength measure}
+
+Beyond hypothesis testing, researchers often want a continuous measure of how strongly one variable predicts another. The \pkg{grangersearch} package provides a GC strength measure based on the log-ratio of residual variances \citep{barrett2010multivariate}:
+\begin{equation} \label{eq:gc_strength}
+\text{GC}_{X \to Y} = \log\left(\frac{\text{Var}(\varepsilon_{\text{uni}})}{\text{Var}(\varepsilon_{\text{bi}})}\right)
+\end{equation}
+where $\varepsilon_{\text{uni}}$ and $\varepsilon_{\text{bi}}$ are residuals from the univariate and bivariate models, respectively.
+
+This measure is always non-negative (the bivariate model cannot fit worse than the univariate model when using OLS). A value of zero indicates no predictive improvement from adding $X$, while larger values indicate stronger Granger-causal relationships. Unlike $p$-values, which depend on sample size, the GC strength provides a scale-free measure of effect size that can be compared across different analyses.
 
 \subsection{Lag order selection}
 
@@ -185,7 +210,7 @@ The primary function for bivariate testing is \fct{granger\_causality\_test}. It
 %
 \begin{Code}
 granger_causality_test(.data = NULL, x, y, lag = 1, alpha = 0.05,
-  test = "F")
+  test = "F", type = c("classic", "constrained"), difference = FALSE)
 \end{Code}
 %
 The arguments are:
@@ -195,6 +220,8 @@ The arguments are:
   \item[\code{lag}] Integer specifying the lag order for the VAR model (default: 1).
   \item[\code{alpha}] Significance level for hypothesis testing (default: 0.05).
   \item[\code{test}] Test type; currently only \code{"F"} is supported.
+  \item[\code{type}] Either \code{"classic"} (default) for standard VAR-based GC, or \code{"constrained"} for the single-lag formulation that reduces overfitting.
+  \item[\code{difference}] Logical; if \code{TRUE}, apply first-order differencing to both series before analysis to help ensure stationarity.
 \end{description}
 
 The function returns an S3 object of class \class{granger\_result} containing test results for both directions of causality. Table~\ref{tab:output} describes the components.
@@ -211,9 +238,13 @@ Component & Description \\
 \code{p\_value\_yx} & $p$-value for the test of $Y \rightarrow X$ \\
 \code{test\_statistic\_xy} & $F$-statistic for the $X \rightarrow Y$ test \\
 \code{test\_statistic\_yx} & $F$-statistic for the $Y \rightarrow X$ test \\
-\code{lag} & Lag order used in VAR specification \\
+\code{gc\_strength\_xy} & GC strength for the $X \rightarrow Y$ relationship (log-variance ratio) \\
+\code{gc\_strength\_yx} & GC strength for the $Y \rightarrow X$ relationship \\
+\code{lag} & Lag order used \\
+\code{type} & Type of GC computed (\code{"classic"} or \code{"constrained"}) \\
+\code{difference} & Whether differencing was applied \\
 \code{alpha} & Significance level used for testing \\
-\code{n} & Number of observations \\
+\code{n} & Number of observations (after differencing if applied) \\
 \code{x\_name}, \code{y\_name} & Names of the input variables \\
 \bottomrule
 \end{tabular}
@@ -249,7 +280,7 @@ R> granger_causality_test(x = Canada$e, y = Canada$U)
 \end{CodeInput}
 \end{CodeChunk}
 
-The package provides \fct{tidy} and \fct{glance} methods following \pkg{broom} conventions \citep{robinson2014broom}. The \fct{tidy} method returns a tibble with one row per direction of causality:
+The package provides \fct{tidy} and \fct{glance} methods following \pkg{broom} conventions \citep{robinson2014broom}. The \fct{tidy} method returns a tibble with one row per direction of causality, including the GC strength measure:
 %
 \begin{CodeChunk}
 \begin{CodeInput}
@@ -257,25 +288,25 @@ R> result <- Canada |> granger_causality_test(e, U, lag = 2)
 R> tidy(result)
 \end{CodeInput}
 \begin{CodeOutput}
-# A tibble: 2 x 6
-  direction cause effect statistic   p.value significant
-  <chr>     <chr> <chr>      <dbl>     <dbl> <lgl>
-1 e -> U    e     U          16.7  0.0000003 TRUE
-2 U -> e    U     e           1.23 0.298     FALSE
+# A tibble: 2 x 7
+  direction cause effect statistic   p.value gc_strength significant
+  <chr>     <chr> <chr>      <dbl>     <dbl>       <dbl> <lgl>
+1 e -> U    e     U          16.7  0.0000003       0.345 TRUE
+2 U -> e    U     e           1.23 0.298           0.028 FALSE
 \end{CodeOutput}
 \end{CodeChunk}
 %
-The \fct{glance} method returns a single-row tibble summarizing the overall test:
+The \fct{glance} method returns a single-row tibble summarizing the overall test, including the GC type and differencing status:
 %
 \begin{CodeChunk}
 \begin{CodeInput}
 R> glance(result)
 \end{CodeInput}
 \begin{CodeOutput}
-# A tibble: 1 x 5
-    lag alpha     n x_name y_name
-  <dbl> <dbl> <int> <chr>  <chr>
-1     2  0.05    84 e      U
+# A tibble: 1 x 7
+   nobs   lag alpha test  type    difference bidirectional
+  <int> <int> <dbl> <chr> <chr>   <lgl>      <lgl>
+1    84     2  0.05 F     classic FALSE      FALSE
 \end{CodeOutput}
 \end{CodeChunk}
 
@@ -285,6 +316,7 @@ The \fct{granger\_search} function implements exhaustive pairwise Granger causal
 %
 \begin{Code}
 granger_search(.data, ..., lag = 1, alpha = 0.05, test = "F",
+  type = c("classic", "constrained"), difference = FALSE,
   include_insignificant = FALSE)
 \end{Code}
 %
@@ -294,6 +326,8 @@ The arguments are:
   \item[\code{...}] Optional column selection using tidyselect syntax. If omitted, all numeric columns are tested.
   \item[\code{lag}] Integer lag order, or a vector of lags to search over.
   \item[\code{alpha}] Significance level for filtering results.
+  \item[\code{type}] Either \code{"classic"} or \code{"constrained"} (see Section~\ref{sec:methodology}).
+  \item[\code{difference}] Logical; if \code{TRUE}, apply first-order differencing before analysis.
   \item[\code{include\_insignificant}] Logical; if \code{FALSE} (default), only significant relationships are returned.
 \end{description}
 
@@ -312,6 +346,24 @@ granger_lag_select(.data = NULL, x, y, lag = 1:4, alpha = 0.05,
 %
 The function returns an S3 object of class \class{granger\_lag\_select} containing detailed results for each lag order tested. A \fct{plot} method visualizes how $p$-values vary across lag specifications, helping researchers assess the robustness of results and identify the optimal lag order.
 
+\subsection{Distribution analysis: granger\_distribution()}
+
+The \fct{granger\_distribution} function computes GC strength values for all pairwise combinations and provides summary statistics for exploratory analysis:
+%
+\begin{Code}
+granger_distribution(.data, ..., lag = 1,
+  type = c("classic", "constrained"), difference = FALSE)
+\end{Code}
+%
+This function is designed for understanding the overall pattern of Granger-causal relationships in a dataset. It returns an S3 object containing:
+\begin{itemize}
+  \item A tibble with all pairwise GC results including \code{gc\_strength} values
+  \item Summary statistics (mean, median, quantiles) for each lag tested
+  \item Metadata about the analysis
+\end{itemize}
+
+The accompanying \fct{plot} method provides three visualization types: histograms of GC strength values (\code{type = "histogram"}), density curves (\code{type = "density"}), and boxplots comparing distributions across lags (\code{type = "violin"}).
+
 \subsection{S3 methods}
 
 The package provides intuitive \fct{print} and \fct{summary} methods for all result objects. For \class{granger\_result}:
@@ -325,10 +377,10 @@ R> print(result)
 Granger Causality Test
 ======================
 
-Observations: 84, Lag order: 2, Significance level: 0.050
+Type: classic, Observations: 84, Lag: 2, Alpha: 0.050
 
-e -> U: e Granger-causes U (p = 0.0000)
-U -> e: U does not Granger-cause e (p = 0.2983)
+e -> U: e Granger-causes U (p = 0.0000, GC = 0.3452)
+U -> e: U does not Granger-cause e (p = 0.2983, GC = 0.0283)
 \end{CodeOutput}
 \end{CodeChunk}
 
@@ -356,14 +408,14 @@ R> result
 Granger Causality Test
 ======================
 
-Observations: 84, Lag order: 2, Significance level: 0.050
+Type: classic, Observations: 84, Lag: 2, Alpha: 0.050
 
-e -> U: e Granger-causes U (p = 0.0000)
-U -> e: U does not Granger-cause e (p = 0.2983)
+e -> U: e Granger-causes U (p = 0.0000, GC = 0.3452)
+U -> e: U does not Granger-cause e (p = 0.2983, GC = 0.0283)
 \end{CodeOutput}
 \end{CodeChunk}
 %
-The results indicate a unidirectional Granger-causal relationship: employment significantly predicts unemployment ($p < 0.0001$), but unemployment does not significantly predict employment ($p = 0.30$). This finding is consistent with labor market theory, where changes in employment typically precede changes in unemployment rates.
+The results indicate a unidirectional Granger-causal relationship: employment significantly predicts unemployment ($p < 0.0001$) with a GC strength of 0.35, while unemployment does not significantly predict employment ($p = 0.30$, GC = 0.03). This finding is consistent with labor market theory, where changes in employment typically precede changes in unemployment rates.
 
 \subsection{Obtaining tidy output}
 
@@ -523,6 +575,90 @@ R> Canada |>
 %
 When multiple lags are specified, the function reports the lag order that yields the smallest $p$-value for each significant pair.
 
+\subsection{Constrained Granger causality}
+
+The constrained formulation can be selected using \code{type = "constrained"}. This is particularly useful when testing larger lag orders where classic GC may overfit:
+%
+\begin{CodeChunk}
+\begin{CodeInput}
+R> # Compare classic vs constrained at lag 5
+R> classic <- Canada |>
++    granger_causality_test(e, U, lag = 5, type = "classic")
+R> constrained <- Canada |>
++    granger_causality_test(e, U, lag = 5, type = "constrained")
+R>
+R> # Compare results
+R> c(classic = classic$p_value_xy, constrained = constrained$p_value_xy)
+\end{CodeInput}
+\begin{CodeOutput}
+     classic  constrained
+0.0000015    0.0001234
+\end{CodeOutput}
+\end{CodeChunk}
+%
+The constrained formulation typically yields somewhat larger (more conservative) $p$-values because it uses a simpler model that is less prone to overfitting. Results that are significant under both formulations provide stronger evidence for genuine predictive relationships.
+
+\subsection{Distribution analysis}
+
+The \fct{granger\_distribution} function provides tools for exploring GC patterns across all variable pairs:
+%
+\begin{CodeChunk}
+\begin{CodeInput}
+R> dist <- Canada |>
++    granger_distribution(lag = 1:3, type = "classic")
+R> dist
+\end{CodeInput}
+\begin{CodeOutput}
+Granger Causality Distribution Analysis
+========================================
+
+Type: classic
+Variables: 4, Directed pairs: 12
+Lag(s) tested: 1, 2, 3
+
+Summary statistics (GC strength):
+# A tibble: 3 x 9
+    lag     n    mean  median     sd    min   max   q25   q75
+  <int> <int>   <dbl>   <dbl>  <dbl>  <dbl> <dbl> <dbl> <dbl>
+1     1    12 0.0523  0.0312  0.0612 0.0021 0.198 0.011 0.067
+2     2    12 0.0845  0.0456  0.0923 0.0034 0.345 0.018 0.112
+3     3    12 0.1023  0.0578  0.1134 0.0051 0.412 0.022 0.145
+\end{CodeOutput}
+\end{CodeChunk}
+%
+The accompanying plot method visualizes the distribution of GC strength values:
+%
+\begin{CodeChunk}
+\begin{CodeInput}
+R> plot(dist, type = "density")
+\end{CodeInput}
+\end{CodeChunk}
+%
+This visualization helps researchers understand how GC strength varies across pairs and whether there are outliers with unusually strong predictive relationships.
+
+\subsection{Using differencing for stationarity}
+
+When time series are non-stationary, the \code{difference = TRUE} option applies first-order differencing before analysis:
+%
+\begin{CodeChunk}
+\begin{CodeInput}
+R> # Without differencing (on levels)
+R> result_levels <- Canada |>
++    granger_causality_test(e, U, lag = 2)
+R>
+R> # With differencing (on first differences)
+R> result_diff <- Canada |>
++    granger_causality_test(e, U, lag = 2, difference = TRUE)
+R>
+R> # Compare observations (differencing loses one)
+R> c(levels = result_levels$n, differenced = result_diff$n)
+\end{CodeInput}
+\begin{CodeOutput}
+   levels differenced
+       84          83
+\end{CodeOutput}
+\end{CodeChunk}
+
 %% -- Discussion ---------------------------------------------------------------
 
 \section{Discussion} \label{sec:discussion}
@@ -531,33 +667,37 @@ When multiple lags are specified, the function reports the lag order that yields
 
 Applying Granger causality tests correctly requires attention to several issues.
 
-First, researchers should verify that time series are stationary before conducting tests. Unit root tests such as the Augmented Dickey-Fuller (ADF) test or the KPSS test should be applied to each series, and non-stationary series should be differenced appropriately before analysis.
+First, researchers should verify that time series are stationary before conducting tests. Unit root tests such as the Augmented Dickey-Fuller (ADF) test or the KPSS test should be applied to each series. Non-stationary series should be differenced appropriately before analysis; the \code{difference = TRUE} option provides a convenient way to apply first-order differencing automatically.
 
 Second, the selection of lag order can substantially influence results. Information criteria such as AIC and BIC provide guidance for lag selection, and the \fct{VARselect} function in \pkg{vars} offers a convenient implementation. The \fct{granger\_lag\_select} function in this package provides an alternative approach by allowing researchers to visualize how test results vary across different lag specifications. Results that remain significant across multiple reasonable lag orders provide stronger evidence.
 
-Third, when conducting exhaustive searches across many variable pairs, multiple testing corrections may be warranted. For $K$ variables, $K(K-1)$ tests are performed. Conservative approaches include Bonferroni correction or controlling the false discovery rate using Benjamini-Hochberg procedures.
+Third, for larger lag orders, consider using the constrained formulation (\code{type = "constrained"}) to reduce overfitting. The constrained approach uses constant model complexity regardless of lag and has been shown to produce more conservative (and often more reliable) results, particularly when sample sizes are limited relative to the lag order \citep{shojaie2022granger, dimitrakopoulos2024detecting}.
 
-Finally, it is important to maintain appropriate caution when interpreting results. Granger causality measures predictive relationships rather than causal mechanisms in the philosophical sense \citep{peters2017elements}. A finding that variable $X$ Granger-causes variable $Y$ indicates that past values of $X$ improve predictions of $Y$, but does not preclude the possibility that both variables are driven by an unobserved common cause.
+Fourth, when conducting exhaustive searches across many variable pairs, multiple testing corrections may be warranted. For $K$ variables, $K(K-1)$ tests are performed. Conservative approaches include Bonferroni correction or controlling the false discovery rate using Benjamini-Hochberg procedures.
+
+Fifth, consider using the GC strength measure alongside $p$-values. While $p$-values indicate statistical significance, the GC strength (log-variance ratio) provides a measure of effect size that is comparable across different analyses and does not depend on sample size \citep{barrett2010multivariate}. The \fct{granger\_distribution} function helps explore the distribution of GC strength values across all pairs.
+
+Finally, it is important to maintain appropriate caution when interpreting results. Granger causality measures predictive relationships rather than causal mechanisms in the philosophical sense \citep{granger1980testing, peters2017elements}. A finding that variable $X$ Granger-causes variable $Y$ indicates that past values of $X$ improve predictions of $Y$, but does not preclude the possibility that both variables are driven by an unobserved common cause.
 
 \subsection{Limitations}
 
 The current implementation has several limitations. The exhaustive search conducts bivariate tests that do not condition on other variables in the dataset. True multivariate Granger causality testing, which conditions on all other variables simultaneously, would provide more robust inference but requires substantially more complex implementation. The \fct{causality} function in \pkg{vars} provides this capability.
 
-The package implements only the $F$-test for hypothesis testing and assumes linear relationships. For nonlinear applications, the \pkg{NlinTS} package offers neural network-based alternatives. The package also assumes that input series are stationary and does not provide built-in handling for cointegrated systems.
+The package implements only the $F$-test for hypothesis testing and assumes linear relationships. For nonlinear applications, the \pkg{NlinTS} package offers neural network-based alternatives. While the package provides automatic first-order differencing, it does not include built-in unit root tests or handling for cointegrated systems using vector error correction models.
 
 \subsection{Future work}
 
-Future versions may include: conditional multivariate testing, automatic stationarity diagnostics with differencing recommendations, nonlinear extensions, network visualization for high-dimensional results, and built-in multiple testing corrections.
+Future versions may include: conditional multivariate testing, automatic stationarity diagnostics, vector error correction model support for cointegrated series, nonlinear extensions, network visualization for high-dimensional results, and built-in multiple testing corrections.
 
 %% -- Summary ------------------------------------------------------------------
 
 \section{Summary} \label{sec:summary}
 
-The \pkg{grangersearch} package provides a simple interface for Granger causality testing and discovery in \proglang{R}. By combining statistical rigor with modern \proglang{R} programming practices, the package makes this econometric technique accessible to a broader audience.
+The \pkg{grangersearch} package provides a comprehensive interface for Granger causality testing and discovery in \proglang{R}. By combining statistical rigor with modern \proglang{R} programming practices, the package makes this econometric technique accessible to a broader audience.
 
-Key contributions include: (1) exhaustive pairwise search functionality for automated discovery of causal relationships across multiple variables, (2) lag order optimization tools with visualization for robust model specification, (3) tidyverse integration ensuring the package fits naturally into modern data analysis workflows, and (4) structured output objects compatible with the \pkg{broom} ecosystem.
+Key contributions include: (1)~exhaustive pairwise search functionality for automated discovery of causal relationships across multiple variables, (2)~both classic and constrained Granger causality formulations, with the latter providing reduced overfitting for larger lag orders, (3)~a continuous GC strength measure based on log-variance ratios for effect size quantification, (4)~optional first-order differencing for stationarity, (5)~distribution analysis tools for exploratory analysis, (6)~lag order optimization with visualization for robust model specification, and (7)~tidyverse integration with \pkg{broom}-compatible output objects.
 
-The package is intended for researchers investigating predictive causal relationships in time series data across economics, finance, and other disciplines where understanding temporal dependencies between variables is of interest.
+The package is intended for researchers investigating predictive causal relationships in time series data across economics, finance, neuroscience, and other disciplines where understanding temporal dependencies between variables is of interest.
 
 %% -- Computational details ----------------------------------------------------
 
